src/objects/loan__Investor_Fund_Transaction__c.object
<CustomObject>
    <description>Record represents funds added to Investor available funds in Fractionalization.</description>
    <fields>
        <fullName>loan__ACH_Filename__c</fullName>
        <label>ACH Filename</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Investor Fund Transaction</relationshipLabel>
        <relationshipName>Investor_Fund_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Balance_After__c</fullName>
        <inlineHelpText>Unlike the API name, this field stores the value BEFORE the transaction is cleared. To get the after value create a formula on the transaction = Balance Before + Transaction Amount.</inlineHelpText>
        <label>Balance After</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Clearing_Date__c</fullName>
        <inlineHelpText>The Clearing date will be populated once the transaction is cleared.</inlineHelpText>
        <label>Clearing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Investor Fund Transaction</relationshipLabel>
        <relationshipName>Investor_Fund_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Reversed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reversed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Sent_To_ACH_On__c</fullName>
        <inlineHelpText>This is the date the transaction was sent to ACH. The lock period for clearing is counted from this date.</inlineHelpText>
        <label>Sent To ACH On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Sent_to_ACH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent To ACH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Statement_Date__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <defaultValue>$User.loan__Current_Branch_s_System_Date__c</defaultValue>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Description__c</fullName>
        <label>Transaction Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Type__c</fullName>
        <formula>IF ( loan__Transaction_Amount__c &gt;= 0, &apos;DEPOSIT&apos;, &apos;WITHDRAWAL&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__BTransaction_Hash__c</fullName>
        <label>BTransaction Hash</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Reference__c</fullName>
        <label>Bank Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Date__c</fullName>
        <label>Bank Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>peer__Bank_Statement_Exception__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement Exception</label>
        <referenceTo>peer__Bank_Recon_Exception__c</referenceTo>
        <relationshipLabel>Investor Fund Transaction</relationshipLabel>
        <relationshipName>Investor_Fund_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Booking_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booking Order(Deprecated)</label>
        <referenceTo>peer__Booking_Order__c</referenceTo>
        <relationshipLabel>Investor Fund Transaction</relationshipLabel>
        <relationshipName>Investor_Fund_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Investment_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Booking</label>
        <referenceTo>peer__Investment_Booking__c</referenceTo>
        <relationshipLabel>Investor Fund Transaction</relationshipLabel>
        <relationshipName>Investor_Fund_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Is_Safe_Funds_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if IFT is related to Safe Funds</description>
        <inlineHelpText>Specifies if IFT is related to Safe Funds</inlineHelpText>
        <label>Is Safe Funds Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Transaction_Date_Quarter__c</fullName>
        <formula>TEXT(YEAR(loan__Transaction_Date__c)) &amp; &quot; &quot; &amp; If(MONTH(loan__Transaction_Date__c) &lt;= 3, &quot;Q1&quot;, 
If(MONTH(loan__Transaction_Date__c) &lt;= 6, &quot;Q2&quot;, 
If(MONTH(loan__Transaction_Date__c) &lt;= 9, &quot;Q3&quot;, &quot;Q4&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Date Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>peer__Verification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>verification object linked to investor fund transaction</description>
        <label>Verification</label>
        <referenceTo>peer__Verification__c</referenceTo>
        <relationshipLabel>Investor Fund Transaction</relationshipLabel>
        <relationshipName>Investor_Fund_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Verified_From_Bank_Statement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified From Bank Statement</label>
        <type>Checkbox</type>
    </fields>
    <label>Investor Fund Transaction</label>
    <nameField>
        <displayFormat>IFT-{000000000}</displayFormat>
        <label>Investor Funds Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Fund Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>loan__Check_Transaction_amount</fullName>
        <active>true</active>
        <errorConditionFormula>OR(loan__Transaction_Amount__c == 0,
ISBLANK( loan__Transaction_Amount__c ))</errorConditionFormula>
        <errorDisplayField>loan__Transaction_Amount__c</errorDisplayField>
        <errorMessage>Transaction amount can not be zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>loan__Check_Withdrawal_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; (loan__Transaction_Amount__c &lt; 0) &amp;&amp;  (loan__Account__r.loan__Undeployed_Funds__c &lt; ABS(loan__Transaction_Amount__c))</errorConditionFormula>
        <errorMessage>Cannot withdraw more than available funds.</errorMessage>
    </validationRules>
</CustomObject>